tests/src/frontend/typechecking/invalid/contravariant_mutable_readonly.sk
mutable class Foo(mutable x: Int)
fun mfoo(mutable Foo): void {
  void
}
fun rfoo(readonly Foo): void {
  void
}

fun main(): void {
  _ = if (true) mfoo else rfoo;
  print_raw("FAIL")
}
